# nptmpl

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.deploy/: liva.sh  setup.md  tmpl.service
demo/: README.md  docker-compose.yml
docs/: CONFIGURATION.md  PUBLISHING.md  REMOTE_ACCESS.md  SERVER_SETUP.md
scripts/: demo_setup.py  generate_service.py
src/nptmpl/: __init__.py
src/nptmpl/cli/: __init__.py  __main__.py  app.py  utils.py
src/nptmpl/core/: __init__.py  cache.py  config.py  engine.py  errors.py  metadata.py  models.py  store.py  sync.py
src/nptmpl/core/remote/: base.py  http.py  resolver.py  ssh.py
src/nptmpl/server/: __init__.py  api.py  auth.py  db.py  deps.py  inspector.py  main.py  reindexer.py  sync.py  ui_utils.py  web.py  ws.py
src/nptmpl/server/routes/: admin.py  public.py
src/nptmpl/server/static/css/: main.css
src/nptmpl/server/static/js/: main.js
src/nptmpl/server/static/media/favicon/: site.webmanifest
src/nptmpl/server/templates/: 404.html  about.html  admin.html  base.html  detail.html  docs.html  index.html  login.html  unauthorized.html
tests/data/: generate_data.py
tests/e2e/: test_edge_cases_network.py  test_invocation_pytest.py  test_pytest_enterprise.py  test_security_pytest.py
tests/integration/: test_complex_pytest.py  test_complex_system.py  test_edge_cases_fs.py  test_edge_cases_state.py  test_reindexer_integration.py  test_remote_db_sync.py  test_remote_pytest.py  test_remote_server.py  test_scale_pytest.py  test_workflow_pytest.py
tests/unit/: test_cli_app.py  test_config_pytest.py  test_core_pytest.py  test_edge_cases_logic.py  test_engine.py  test_pathspec_integration.py  test_reindexer.py  test_server_api.py  test_server_routes.py  test_ssh_transport.py  test_store_popularity.py  test_version_pytest.py  test_ws_manager.py
