[project]
name = "nptmpl"
version = "1.0.0"
description = "A Professional Local Template Manager"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "nguyenpanda", email = "hatuongnguyen0107@gmail.com" },
]
keywords = ["template", "cli", "distributed", "jinja2", "automation", "boilerplate"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0.3",
    "rich>=13.7.0",
    "argcomplete>=3.2.1",
    "requests>=2.31.0",
    "questionary>=2.0.1",
    "pathspec>=0.12.1",
    "jinja2>=3.1.3",
    "paramiko>=3.4.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "markdown>=3.5.2",
    "pygments>=2.17.2",
    "itsdangerous>=2.1.2",
    "starlette>=0.36.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "requests-mock>=1.12.1",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://nptmpl.nguyenpanda.com"
Repository = "https://github.com/nguyenpanda/nptmpl"
Documentation = "https://github.com/nguyenpanda/nptmpl/blob/main/README.md"

[project.scripts]
nptmpl = "nptmpl.cli:main"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nptmpl"]

[tool.hatch.build.targets.wheel.force-include]
"docs" = "nptmpl/docs"
"README.md" = "nptmpl/README.md"

[tool.uv]
package = true
